--- a/Front End/ipadAusleihe/src/app/account/login.component.html
+++ b/Front End/ipadAusleihe/src/app/account/login.component.html
@@ -9,7 +9,7 @@
       <div class="form-group m-3">
         <input type="password" name="password" [(ngModel)]="user" class="form-control" id="password" placeholder="Eingabe Passwort">
       </div>
-        <button type="submit" [(ngModel)]="password" class="btn btn-outline-success" click="loginUser()">Login</button>
+        <button type="submit" [(ngModel)]="password" class="btn btn-outline-success" click="loginUser()" routerLink="/klassen/">Login</button>
     </form>
   </div>
 
