--- a/Front End/ipadAusleihe/src/styles.css
+++ b/Front End/ipadAusleihe/src/styles.css
@@ -2,3 +2,6 @@
 @import "~bootstrap/dist/css/bootstrap.css";
 
 @import "./app/app.component.css";
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
