Update Front End

--- a/Front End/ipadAusleihe/src/app/app.component.css
+++ b/Front End/ipadAusleihe/src/app/app.component.css
@@ -1,35 +1,69 @@
 
 #login {
-background-color: rgb(235, 235, 238);
+background-color: rgb(255, 255, 255);
 width: 30%;
-margin-left: 31.7rem;
+height: 500px;
+margin: 90px 0 0 31.7rem;
 }
 
-.card-header {
-    color: rgb(63, 222, 0);
-    background-color: rgb(219, 250, 198);
+body {
+   background-image: linear-gradient(45deg,rgb(52, 0, 222), white ); 
+   background-attachment: fixed
+}
+.bg {
+    height: 100%;
+}
+
+h1{
+    font-size:48px;
+    font-weight:100;
+ }
+
+ p{
+    margin: 2rem 0 0 0;
+    font-size:16px;
+    font-weight:100;
+    color: gray;
+
+ }
+/*.card-header {
+    color: rgb(255, 255, 255);
+    background-color: rgb(52, 0, 222);
     font-size: 35px;
     font-weight:300
-}
+} */
 
 input {
-    padding: 0.7rem;
-    
+    margin: 0.5rem 0 0 0;
+    padding: 1.2rem 6.2rem 0.2rem 0;
+    border-style:groove;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-bottom: solid 1px;
+    border-color: black;
+    background-color: rgb(248, 248, 248); 
+    font-size: 14px;
+    font-weight: 400;
+}
+
+.form-control {
+    border-radius: none I !important;
 }
 
 button {
-    margin-left: 8.7rem;
-    background-color:rgb(1, 223, 1);
+    margin: 5rem 0 0 5.7rem;
+    padding: 10px 70px 10px 70px;
+    background-color:rgb(52, 0, 222);
+    background-image: linear-gradient(45deg,rgb(52, 0, 222), rgb(144, 113, 243), rgb(205, 189, 255) );
     color:white;
     border: none;
-    font-size: 20px;
-    font: weight 400px;
-    
+    font-size: 18px;
+    font-weight: 100;   
 }
 
-
 button.overlay {
-    background-color:rgb(63, 222, 0);
+    background-color:rgb(102, 226, 233);
     
 }
 
