--- a/Front End/ipadAusleihe/src/app/app.component.html
+++ b/Front End/ipadAusleihe/src/app/app.component.html
@@ -1,5 +1,7 @@
-<h4 class="card-header p-3">{{ title }}</h4>
+
+<!-- <h4 class="card-header p-3">{{ title }}</h4>
 <div class="card-body m-5">
   <div class="col m-5 text-center"></div>
-</div>
+</div> -->
 <router-outlet></router-outlet>
+
