--- a/Front End/ipadAusleihe/src/app/klassen/klassen.component.html
+++ b/Front End/ipadAusleihe/src/app/klassen/klassen.component.html
@@ -1,5 +1,5 @@
 <div class="col p-4 m-3 text-center">
-  <h1>Klassenübersicht</h1>
+  <h1 style="color: white">Klassenübersicht</h1>
 </div>
 
 <div class="d-grid gap-2 col-3 mx-auto" *ngFor="let klasse of klassen">
