--- a/Front End/ipadAusleihe/src/styles.css
+++ b/Front End/ipadAusleihe/src/styles.css
@@ -2,6 +2,11 @@
 @import "~bootstrap/dist/css/bootstrap.css";
 
 @import "./app/app.component.css";
+@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html, body { height: 100%;
+    margin: auto;
+    font-family: Roboto, "Helvetica Neue", sans-serif; 
+    }
+
+
