--- a/Front End/ipadAusleihe/src/app/account/login.component.html
+++ b/Front End/ipadAusleihe/src/app/account/login.component.html
@@ -1,17 +1,20 @@
-<div class="col p-4 m-3 text-center">
-  <h1 >Login</h1>
-</div>
-  <div class="col p-4 border border-none rounded-3" id="login">
+
+  <div class="col p-4" id="login">
     <form class="m-3">
       <div class="form-group m-3">
-        <input type="user" name="user" class="form-control" id="username" aria-describedby="userHelp" placeholder="Eingabe Benutzername">
+        <div class="col p-4 m-3 text-center">
+          <h1>Login</h1>
+        </div>
+        <p>Username</p>
+        <input type="user" name="user" class="form-control rounded-0" id="username" aria-describedby="userHelp" placeholder="Eingabe Benutzername">
       </div>
-      <div class="form-group m-3">
+     <!--  <div class="form-group m-3">
         <input type="password" name="password" [(ngModel)]="user" class="form-control" id="password" placeholder="Eingabe Passwort">
-      </div>
+      </div> -->
         <button type="submit" [(ngModel)]="password" class="btn btn-outline-success" click="loginUser()" routerLink="/klassen/">Login</button>
     </form>
   </div>
+
 
 
 
