--- a/Front End/ipadAusleihe/src/app/schueler/schueler.component.html
+++ b/Front End/ipadAusleihe/src/app/schueler/schueler.component.html
@@ -18,7 +18,7 @@
           {{ipad.seriennummer}}
         </mat-option>
       </mat-autocomplete>
-      <button class="button-7" role="button" (click)="confirm()">iPad Ausgeben</button>
+      <button class="button-7" role="button" (click)="confirm(i)">iPad Ausgeben</button>
     </div>
     </td>
     </tr>
