--- a/Front End/ipadAusleihe/src/app/schueler/schueler.component.css
+++ b/Front End/ipadAusleihe/src/app/schueler/schueler.component.css
@@ -1,18 +1,52 @@
 table {
   font-family: arial, sans-serif;
   border-collapse: collapse;
-  width: 100%;
-  margin-left: 20px;
+  width: 90%;
+  margin: 20px 0 50px 60px;
+  background-color: white;
+  font-size: 16px;
+  font-weight: 100;
 }
 
 td, th {
-  border: 1px solid #dddddd;
+  border-bottom: 1px solid #dddddd;
   text-align: left;
   padding: 8px;
+  font-size: 16px;
+  font-weight: 100;
+}
+
+h1{
+  font-size:48px;
+  font-weight:100;
 }
 
 tr:nth-child(even) {
   background-color: #dddddd;
+}
+
+#back {
+  color:white;
+  background: none;
+  border-bottom: 1px solid white;
+  margin: 0.2rem 0 0 0;
+}
+
+#logout {
+  color:rgb(157, 157, 157);
+  background: none;
+  border-bottom: 1px solid rgb(157, 157, 157);
+  margin: 0.2rem 0 0 0;
+  float:right;
+}
+
+div.col {
+  border-style:groove;
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  border-bottom: solid 1px;
+  border-color: rgb(255, 255, 255);
 }
 
 
