--- a/Front End/ipadAusleihe/src/app/schueler/schueler.component.html
+++ b/Front End/ipadAusleihe/src/app/schueler/schueler.component.html
@@ -10,10 +10,10 @@
 <table class="table">
   <thead class="thead-light">
     <tr>
-      <th scope="col">ID</th>
-      <th scope="col">Nachname</th>
-      <th scope="col">Vorname</th>
-      <th scope="col">iPad Seriennummer</th>
+      <th scope="col" style="width: 10%">ID</th>
+      <th scope="col" style="width: 20%">Nachname</th>
+      <th scope="col" style="width: 20%">Vorname</th>
+      <th scope="col" style="width: 50%">iPad Seriennummer</th>
       </tr>
   </thead>
 
